--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
-    "redux": "^4.2.1",
+    "react-toastify": "^9.1.3",
     "ts-node": "^10.9.1",
     "yup": "^1.3.2"
   },
